// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NginxRouterModule UT should test add and delete operations 1`] = `
[
  {
    "action": "add",
    "field": "imageId",
    "value": "quadnix/nginx:0.0.1",
  },
  {
    "action": "add",
    "field": "regionId",
    "value": "region-1",
  },
  {
    "action": "add",
    "field": "environmentName",
    "value": "qa",
  },
  {
    "action": "add",
    "field": "serverKey",
    "value": "nginx",
  },
  {
    "action": "add",
    "field": "deploymentTag",
    "value": "nginx@0.0.1",
  },
  {
    "action": "add",
    "field": "executionId",
    "value": "nginx@0.0.1_qa",
  },
]
`;

exports[`NginxRouterModule UT should test add and delete operations 2`] = `
{
  "members": [
    {
      "context": "support=nginx,app=test",
    },
    {
      "context": "deployment=nginx@0.0.1,support=nginx,app=test",
    },
    {
      "context": "execution=nginx@0.0.1_qa,deployment=nginx@0.0.1,support=nginx,app=test,environment=qa,region=region-1,app=test",
    },
  ],
}
`;

exports[`NginxRouterModule UT should test add and delete operations 3`] = `
[
  {
    "action": "add",
    "field": "imageId",
    "value": "quadnix/nginx:0.0.2",
  },
  {
    "action": "add",
    "field": "deploymentTag",
    "value": "nginx@0.0.2",
  },
  {
    "action": "add",
    "field": "executionId",
    "value": "nginx@0.0.2_qa",
  },
]
`;

exports[`NginxRouterModule UT should test add and delete operations 4`] = `
{
  "members": [
    {
      "context": "support=nginx,app=test",
    },
    {
      "context": "deployment=nginx@0.0.1,support=nginx,app=test",
    },
    {
      "context": "execution=nginx@0.0.1_qa,deployment=nginx@0.0.1,support=nginx,app=test,environment=qa,region=region-1,app=test",
    },
    {
      "context": "deployment=nginx@0.0.2,support=nginx,app=test",
    },
    {
      "context": "execution=nginx@0.0.2_qa,deployment=nginx@0.0.2,support=nginx,app=test,environment=qa,region=region-1,app=test",
    },
  ],
}
`;

exports[`NginxRouterModule UT should test add and delete operations 5`] = `
[
  {
    "action": "delete",
    "field": "executionId",
    "value": "nginx@0.0.1_qa",
  },
  {
    "action": "delete",
    "field": "deploymentTag",
    "value": "nginx@0.0.1",
  },
]
`;

exports[`NginxRouterModule UT should test add and delete operations 6`] = `
{
  "members": [
    {
      "context": "support=nginx,app=test",
    },
    {
      "context": "deployment=nginx@0.0.2,support=nginx,app=test",
    },
    {
      "context": "execution=nginx@0.0.2_qa,deployment=nginx@0.0.2,support=nginx,app=test,environment=qa,region=region-1,app=test",
    },
  ],
}
`;
